# MLGeometry

./: CHANGELOG.md  Geodesics_on_CY_manifolds.ipynb  Guide.ipynb  Guide_multi.ipynb  LICENSE  Leaderboard.md  README.md  pyproject.toml  requirements.txt
MLGeometry/: __init__.py  bihomoNN.py  complex_math.py  hypersurface.py  lbfgs.py  loss.py  tf_dataset.py  u1equivariant.py
src/MLGeometry/: __init__.py  bihomoNN.py  cicyhypersurface.py  complex_math.py  config.py  dataset.py  hypersurface.py  lbfgs.py  loss.py  tf_dataset.py  trainer.py
training/: README.md  bihomoNN_train.py  bihomoNN_train.sh  models.py
training_u1/: models.py  u1equiv_train.py  u1equiv_train.sh
