[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MLGeometry-JAX"
readme = "README.md"
description = "Higher dimensional computational geometry using machine learning software (JAX backend)"
requires-python = ">=3.11"
version = "2.0.0"
dependencies = [
    "jax",
    "flax",
    "optax",
    "jaxopt",
    "sympy",
    "matplotlib",
    "mpmath",
    "numpy"
]
license = { file = "LICENSE" }
maintainers = [
    {name = "Yidi Qi", email = "qiyidi2012@gmail.com"}
]

[project.urls]
Homepage = "https://github.com/yidiq7/MLGeometry"
Changelog = "https://github.com/yidiq7/MLGeometry/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["MLGeometry"]
package-dir = {"" = "src"}
